--- a/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_USReportMonthSchedule.cls
@@ -25,6 +25,7 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             List<Report> paymentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Payments_Report_US'];
             List<Report> shipmentRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName = 'Shipments_Report_Finance_US'];
             List<Report> returnOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Return_Orders_Report_Finance_US'];
+        	List<Report> refundOrdersRep    = [SELECT Id, Name, DeveloperName FROM Report WHERE DeveloperName  = 'Refunds_Report_US_79u'];
             
             
             String invoiceReportId = (String)invoiceRep.get(0).get('Id');
@@ -32,6 +33,7 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             String paymentReportId = (String)paymentRep.get(0).get('Id');
             String shipmentReportId = (String)shipmentRep.get(0).get('Id');
             String returnOrdersReportId = (String)returnOrdersRep.get(0).get('Id');
+        	String refundOrdersReportId = (String)refundOrdersRep.get(0).get('Id');
 
 
             String urlFilters = '?&pv0=' + firstDay + '&pv1=' + lastDay + '&csv=1&exp=1&enc=UTF-8&isdtp=p1';
@@ -43,6 +45,7 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             Messaging.EmailFileAttachment paymentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment shipmentAttachment    = new Messaging.EmailFileAttachment();
             Messaging.EmailFileAttachment returnOrdersAttachment    = new Messaging.EmailFileAttachment();
+        	Messaging.EmailFileAttachment refundOrdersAttachment    = new Messaging.EmailFileAttachment();
             
 
 
@@ -51,72 +54,85 @@ public with sharing class SOM_USReportMonthSchedule Implements Schedulable {
             ApexPages.PageReference paymentReport;
             ApexPages.PageReference shipmentReport;
             ApexPages.PageReference returnOrdersReport;
+        	ApexPages.PageReference refundOrdersReport;
 			
-            
-            if(!invoiceRep.isEmpty()){
-                invoiceReport    = new ApexPages.PageReference('/'+invoiceReportId + urlFilters);
-
-            }
-            if(!creditMemoRep.isEmpty()){
-                creditMemoReport = new ApexPages.PageReference('/'+creditMemoReportId + urlFilters);
-
-            }
-            if(!paymentRep.isEmpty()){
-                paymentReport    = new ApexPages.PageReference('/'+paymentReportId + urlFilters);
-
-            }
-            if(!shipmentRep.isEmpty()){
-                    shipmentReport    = new ApexPages.PageReference('/'+shipmentReportId + urlFilters);
-    
-                }
-            if(!returnOrdersRep.isEmpty()){
-                    returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
-    
-                }
-        
+                    
 
             Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
             List<Messaging.EmailFileAttachment> attchs = new List<Messaging.EmailFileAttachment>();
 
-            if(Test.isRunningTest()) { 
-                invoiceAttachment.setBody(Blob.valueOf('UnitInvoice.Test'));
-                creditMemoAttachment.setBody(Blob.valueOf('UnitCM.Test'));
-                paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
-                shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
-                returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
-            } 
-            else{
-                if(!invoiceRep.isEmpty()){
+
+        	if(!invoiceRep.isEmpty()){
+                	invoiceReport    = new ApexPages.PageReference('/'+invoiceReportId + urlFilters);
                     invoiceAttachment.setFileName('Sales Invoice Report.csv');
-                    invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
+                    //invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
                     invoiceAttachment.setContentType('text/csv');
                     attchs.add(invoiceAttachment);
                 }
                 if(!creditMemoRep.isEmpty()){
+                	creditMemoReport = new ApexPages.PageReference('/'+creditMemoReportId + urlFilters);
                     creditMemoAttachment.setFileName('Sales Credit Memo Report.csv');
-                    creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
+                    //creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
                     creditMemoAttachment.setContentType('text/csv');
                     attchs.add(creditMemoAttachment);
                 }
                 if(!paymentRep.isEmpty()){
+                    paymentReport    = new ApexPages.PageReference('/'+paymentReportId + urlFilters);
                     paymentAttachment.setFileName('Payment Report.csv');
-                    paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
+                    //paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
                     paymentAttachment.setContentType('text/csv');
                     attchs.add(paymentAttachment);
                 }
                 if(!shipmentRep.isEmpty()){
+                    shipmentReport    = new ApexPages.PageReference('/'+shipmentReportId + urlFilters);
                     shipmentAttachment.setFileName('Shipment Report.csv');
-                    shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
+                    //shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
                     shipmentAttachment.setContentType('text/csv');
                     attchs.add(shipmentAttachment);
                 }
                 if(!returnOrdersRep.isEmpty()){
+                    returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
                     returnOrdersAttachment.setFileName('Return Orders Report.csv');
-                    returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
+                    //returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
                     returnOrdersAttachment.setContentType('text/csv');
                     attchs.add(returnOrdersAttachment);
                 }
-            }
+                if(!refundOrdersRep.isEmpty()){
+                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
+                    refundOrdersAttachment.setFileName('Refund Orders Report.csv');
+                    //refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
+                    refundOrdersAttachment.setContentType('text/csv');
+                    attchs.add(refundOrdersAttachment);
+                }
+
+                if(Test.isRunningTest()) { 
+                        invoiceAttachment.setBody(Blob.valueOf('UnitInvoice.Test'));
+                        creditMemoAttachment.setBody(Blob.valueOf('UnitCM.Test'));
+                        paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
+                        shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
+                        returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
+                        refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
+                    }else{
+                        if(!invoiceRep.isEmpty()){
+                            invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
+                        }
+                        if(!creditMemoRep.isEmpty()){
+                            creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
+                        }
+                        if(!paymentRep.isEmpty()){
+                            paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
+                        }
+                        if(!shipmentRep.isEmpty()){
+                            shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
+                        }
+                        if(!returnOrdersRep.isEmpty()){
+                            returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
+                        }
+                        if(!refundOrdersRep.isEmpty()){
+                                refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
+                    }
+                } 
+        
 
             email.setFileAttachments(attchs);
             
