--- a/unpackaged/main/default/classes/SOM_USWeeklyReportSchedule.cls
+++ b/unpackaged/main/default/classes/SOM_USWeeklyReportSchedule.cls
@@ -5,15 +5,27 @@ public with sharing class SOM_USWeeklyReportSchedule Implements Schedulable {
     
     @future(callout=true)
     public static void weekExportTEST() {
-
+        
         date myDate = date.today();
 		DateTime weekStart = myDate.toStartofWeek().addDays(-7);
         String previousMonday = weekStart.format('MM/dd/YYYY');
+        String dayOfWeek = weekStart.format('u');
         
-        OrgWideEmailAddress owa = [select id, Address, DisplayName from OrgWideEmailAddress where Address = 'maha.meghras@viseo.com' OR Address = 'noreply@rimowa.com' limit 1];
-
         DateTime previousSundayDate = myDate.toStartofWeek().addDays(-1);
 		String previousSunday = previousSundayDate.format('MM/dd/YYYY');
+        
+        if(dayOfWeek !='1'){
+            weekStart = myDate.toStartofWeek().addDays(-6);
+	 		previousMonday = weekStart.format('MM/dd/YYYY');
+            
+            previousSundayDate = myDate.toStartofWeek();
+		    previousSunday = previousSundayDate.format('MM/dd/YYYY');
+            
+        }
+                
+
+        
+        OrgWideEmailAddress owa = [select id, Address, DisplayName from OrgWideEmailAddress where Address = 'maha.meghras@viseo.com' OR Address = 'noreply@rimowa.com' limit 1];
 
         List<Messaging.SingleEmailMessage> emails = new List<Messaging.SingleEmailMessage>();
 
@@ -57,98 +69,80 @@ public with sharing class SOM_USWeeklyReportSchedule Implements Schedulable {
         	ApexPages.PageReference refundOrdersReport;
 			
             
-            if(!invoiceRep.isEmpty()){
-                invoiceReport    = new ApexPages.PageReference('/'+invoiceReportId + urlFilters);
-
-            }
-            if(!creditMemoRep.isEmpty()){
-                creditMemoReport = new ApexPages.PageReference('/'+creditMemoReportId + urlFilters);
-
-            }
-            if(!paymentRep.isEmpty()){
-                paymentReport    = new ApexPages.PageReference('/'+paymentReportId + urlFilters);
-
-            }
-            if(!shipmentRep.isEmpty()){
-                    shipmentReport    = new ApexPages.PageReference('/'+shipmentReportId + urlFilters);
-    
-                }
-            if(!returnOrdersRep.isEmpty()){
-                    returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
-    
-                }
-        	if(!refundOrdersRep.isEmpty()){
-                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
-    
-                }
-
             Messaging.SingleEmailMessage email = new Messaging.SingleEmailMessage();
             List<Messaging.EmailFileAttachment> attchs = new List<Messaging.EmailFileAttachment>();
 
-            if(Test.isRunningTest()) { 
-                invoiceAttachment.setBody(Blob.valueOf('UnitInvoice.Test'));
-                creditMemoAttachment.setBody(Blob.valueOf('UnitCM.Test'));
-                paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
-                shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
-                returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
-                refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
-            }else{
-            if(!invoiceRep.isEmpty()){
-                invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
-            }
-            if(!creditMemoRep.isEmpty()){
-                creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
-            }
-            if(!paymentRep.isEmpty()){
-                paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
-            }
-            if(!shipmentRep.isEmpty()){
-                shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
-            }
-            if(!returnOrdersRep.isEmpty()){
-                returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
-            }
-            if(!refundOrdersRep.isEmpty()){
-                    refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
-            }
-        } 
 
                 if(!invoiceRep.isEmpty()){
+                	invoiceReport    = new ApexPages.PageReference('/'+invoiceReportId + urlFilters);
                     invoiceAttachment.setFileName('Sales Invoice Report.csv');
                     //invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
                     invoiceAttachment.setContentType('text/csv');
                     attchs.add(invoiceAttachment);
                 }
                 if(!creditMemoRep.isEmpty()){
+                	creditMemoReport = new ApexPages.PageReference('/'+creditMemoReportId + urlFilters);
                     creditMemoAttachment.setFileName('Sales Credit Memo Report.csv');
                     //creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
                     creditMemoAttachment.setContentType('text/csv');
                     attchs.add(creditMemoAttachment);
                 }
                 if(!paymentRep.isEmpty()){
+                    paymentReport    = new ApexPages.PageReference('/'+paymentReportId + urlFilters);
                     paymentAttachment.setFileName('Payment Report.csv');
                     //paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
                     paymentAttachment.setContentType('text/csv');
                     attchs.add(paymentAttachment);
                 }
                 if(!shipmentRep.isEmpty()){
+                    shipmentReport    = new ApexPages.PageReference('/'+shipmentReportId + urlFilters);
                     shipmentAttachment.setFileName('Shipment Report.csv');
                     //shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
                     shipmentAttachment.setContentType('text/csv');
                     attchs.add(shipmentAttachment);
                 }
                 if(!returnOrdersRep.isEmpty()){
+                    returnOrdersReport    = new ApexPages.PageReference('/'+returnOrdersReportId + urlFilters);
                     returnOrdersAttachment.setFileName('Return Orders Report.csv');
                     //returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
                     returnOrdersAttachment.setContentType('text/csv');
                     attchs.add(returnOrdersAttachment);
                 }
                 if(!refundOrdersRep.isEmpty()){
+                    refundOrdersReport    = new ApexPages.PageReference('/'+refundOrdersReportId + urlFilters);
                     refundOrdersAttachment.setFileName('Refund Orders Report.csv');
                     //refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
                     refundOrdersAttachment.setContentType('text/csv');
                     attchs.add(refundOrdersAttachment);
                 }
+        
+                if(Test.isRunningTest()) { 
+                    invoiceAttachment.setBody(Blob.valueOf('UnitInvoice.Test'));
+                    creditMemoAttachment.setBody(Blob.valueOf('UnitCM.Test'));
+                    paymentAttachment.setBody(Blob.valueOf('UnitPayment.Test'));
+                    shipmentAttachment.setBody(Blob.valueOf('Unitshipment.Test'));
+                    returnOrdersAttachment.setBody(Blob.valueOf('UnitreturnOrders.Test'));
+                    refundOrdersAttachment.setBody(Blob.valueOf('UnitrefundOrders.Test'));
+                }else{
+                    if(!invoiceRep.isEmpty()){
+                        invoiceAttachment.setBody(Blob.valueof(invoiceReport.getContent().toString()));
+                    }
+                    if(!creditMemoRep.isEmpty()){
+                        creditMemoAttachment.setBody(Blob.valueof(creditMemoReport.getContent().toString()));
+                    }
+                    if(!paymentRep.isEmpty()){
+                        paymentAttachment.setBody(Blob.valueof(paymentReport.getContent().toString()));
+                    }
+                    if(!shipmentRep.isEmpty()){
+                        shipmentAttachment.setBody(Blob.valueof(shipmentReport.getContent().toString()));
+                    }
+                    if(!returnOrdersRep.isEmpty()){
+                        returnOrdersAttachment.setBody(Blob.valueof(returnOrdersReport.getContent().toString()));
+                    }
+                    if(!refundOrdersRep.isEmpty()){
+                            refundOrdersAttachment.setBody(Blob.valueof(refundOrdersReport.getContent().toString()));
+                    }
+            } 
 
 
             email.setFileAttachments(attchs);
