--- a/unpackaged/main/default/translations/it.translation-meta.xml
+++ b/unpackaged/main/default/translations/it.translation-meta.xml
@@ -45,6 +45,30 @@
         <name>Invoice_Url_Prefix</name>
     </customLabels>
     <customLabels>
+        <label><!-- LABS_B2C_AccountCreation --></label>
+        <name>LABS_B2C_AccountCreation</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_B2C_AccountLogin --></label>
+        <name>LABS_B2C_AccountLogin</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_B2C_AccountUpdate --></label>
+        <name>LABS_B2C_AccountUpdate</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_B2C_BackInStock --></label>
+        <name>LABS_B2C_BackInStock</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_B2C_Newsletter --></label>
+        <name>LABS_B2C_Newsletter</name>
+    </customLabels>
+    <customLabels>
+        <label><!-- LABS_B2C_orderConfirmationPage --></label>
+        <name>LABS_B2C_orderConfirmationPage</name>
+    </customLabels>
+    <customLabels>
         <label><!-- LABS_CGI --></label>
         <name>LABS_CGI</name>
     </customLabels>
